# chess

./: .gitignore  CMakeLists.txt  LICENSE  README.md  freetype.lib  libogg.lib
src/: main.cpp  pch.hpp
src/app/: application.cpp  application.hpp  config.hpp  window.cpp  window.hpp
src/game/entity/: bishop.cpp  bishop.hpp  board.cpp  board.hpp  cell.cpp  cell.hpp  gameobject.hpp  king.cpp  king.hpp  kninght.cpp  kninght.hpp  pawn.cpp  pawn.hpp  piece.cpp  piece.hpp  piecetype.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp
src/renderers/: masterrenderer.cpp  masterrenderer.hpp  sfmlrenderer.cpp  sfmlrenderer.hpp
src/resources/: resourceholder.cpp  resourceholder.hpp  resourcemanager.hpp
src/states/: basestate.hpp  gamestate.cpp  gamestate.hpp
src/ui/: basicbutton.cpp  basicbutton.hpp  button.hpp  component.cpp  component.hpp  textbutton.cpp  textbutton.hpp
src/utils/: assert.hpp  random.cpp  random.hpp  singleton.hpp  types.hpp
